--- a/DL-CNN-PyTorch-FashionMNIST.ipynb
+++ b/DL-CNN-PyTorch-FashionMNIST.ipynb
@@ -6,13 +6,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#first commit"
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import scipy.stats as stats\n",
+    "import copy\n",
+    "import keras\n",
+    "\n",
+    "#for importing data\n",
+    "import torchvision\n",
+    "import torchvision.transforms as T\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from torch.utils.data import DataLoader, TensorDataset, Subset\n",
+    "import pandas as pd\n",
+    "\n",
+    "#for data visualization\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from IPython.display import set_matplotlib_formats\n",
+    "set_matplotlib_formats('svg')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
