--- a/DL-CNN-PyTorch-FashionMNIST.ipynb
+++ b/DL-CNN-PyTorch-FashionMNIST.ipynb
@@ -139,6 +139,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 4: Translate into dataloader objects\n",
+    "batchsize = 32\n",
+    "train_loader = DataLoader(train_data, batch_size=batchsize, shuffle=True, drop_last=True)\n",
+    "dev_loader = DataLoader(dev_data, batch_size=batchsize)\n",
+    "test_loader = DataLoader(test_data, batch_size=len(test_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
