--- a/DL-CNN-PyTorch-FashionMNIST.ipynb
+++ b/DL-CNN-PyTorch-FashionMNIST.ipynb
@@ -152,6 +152,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60000\n",
+      "4000\n",
+      "6000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Number of images in each dataset\n",
+    "print(len(train_data))\n",
+    "print(len(dev_data))\n",
+    "print(len(test_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 255\n"
+     ]
+    }
+   ],
+   "source": [
+    "# range of pixel intensity values\n",
+    "print(train_data.data.min().item(), train_data.data.max().item())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
