--- a/DL-CNN-PyTorch-FashionMNIST.ipynb
+++ b/DL-CNN-PyTorch-FashionMNIST.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,8 +78,10 @@
     "transform = T.Compose([\n",
     "    T.ToTensor(),\n",
     "    T.Normalize(\n",
-    "        mean=[0.5,0.5,0.5],\n",
-    "        std =[0.5,0.5,0.5]\n",
+    "        mean=[0.5],\n",
+    "        std =[0.5]\n",
+    "        # mean=[0.5,0.5,0.5],\n",
+    "        # std =[0.5,0.5,0.5]\n",
     "        )\n",
     "    #T.Resize()\n",
     "    #T.RandomHorizontalFlip(p=0.5)\n",
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +118,7 @@
        "torch.Size([10000, 28, 28])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -188,6 +190,47 @@
    "source": [
     "# range of pixel intensity values\n",
     "print(train_data.data.min().item(), train_data.data.max().item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['T-shirt/top', 'Trouser', 'Pullover', 'Dress', 'Coat', 'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle boot']\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# unique class categories\n",
+    "print(train_data.classes)\n",
+    "print(len(train_data.classes))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([32, 1, 28, 28])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check dimentions from train loader\n",
+    "# Therefore: transformations are ONLY applied when we pull data from train_loader\n",
+    "X, y = next(iter(train_loader))\n",
+    "print(X.data.shape)\n",
+    "# number of images * channels features * width * height"
    ]
   },
   {
