--- a/DL-CNN-PyTorch-FashionMNIST.ipynb
+++ b/DL-CNN-PyTorch-FashionMNIST.ipynb
@@ -1218,6 +1218,253 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# parameters\n",
+    "#inChans  = 3 # RGB\n",
+    "#outChans = 15\n",
+    "#krnSize  = 5 # should be an odd number\n",
+    "#stride   = 1\n",
+    "#padding  = 0\n",
+    "\n",
+    "#imsize   = [256,256]\n",
+    "\n",
+    "## create the instance\n",
+    "#c = nn.Conv2d         (inChans,outChans,krnSize,stride,padding)\n",
+    "#c = nn.ConvTranspose2d(inChans,outChans,krnSize,stride,padding)\n",
+    "\n",
+    "# create an image\n",
+    "#img = torch.rand(1,inChans,imsize[0],imsize[1])\n",
+    "\n",
+    "# run convolution and compute its shape\n",
+    "#resimg = c(img)\n",
+    "#empSize = torch.squeeze(resimg).shape\n",
+    "\n",
+    "# compute the size of the result according to the formula\n",
+    "#expectSize = np.array([outChans,0,0],dtype=int)\n",
+    "#expectSize[1] = np.floor( (imsize[0]+2*padding-krnSize)/stride[0] ) + 1\n",
+    "#expectSize[2] = np.floor( (imsize[1]+2*padding-krnSize)/stride[1] ) + 1\n",
+    "\n",
+    "# check the size of the output\n",
+    "#print(f'Expected size: {expectSize}')\n",
+    "#print(f'Empirical size: {list(empSize)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# **) size of transpose convolution formula \"to calculate the image size of the transpose convolution\"\n",
+    "# **) # of pixels in output image = Stride  * (# of pixels in input image - 1) + # of pixels in kernel height    - 2 * Padding\n",
+    "# **)                       Nh    = Sh      * (Mh                         - 1) + K                               - 2*P\n",
+    "# #\n",
+    "# *) size of convolution formula \"to calculate the image size of convolution\"\n",
+    "# *) # of pixels in current layer = Floor ( (# of pixels in previous layer  + 2*Padding - # of pixels in kernel height) / Stride ) + 1\n",
+    "# *)                        Nh    = Floor ( ( Mh                            + 2*P       - K                           ) / Sh     ) + 1\n",
+    "# *) expectSize = np.array([outChans, 0, 0], dtype=int)\n",
+    "# *) expectsize[1] = np.floor( (imsize[0] + 2*padding - krnSize) / stride[0] ) + 1\n",
+    "# *) expectsize[2] = np.floor( (imsize[1] + 2*padding - krnSize) / s/tride[1] ) + 1\n",
+    "# #\n",
+    "# 1) Image (channels   X Width  X Height)\n",
+    "# 1) Image (1          X i/p 28 X i/p 28)\n",
+    "# #\n",
+    "# 2) Conv1 (# of feature maps kernels   X o/p Width X o/p Height)\n",
+    "# 2) Conv1 ( 10                         X 26        X 26        ) #lost 1 pixel left & 1 pixel right (1 pixel top & 1 pixel bottom) \n",
+    "# #\n",
+    "# 3) maxpool1 (# of feature maps kernels X o/p width X o/p Height)\n",
+    "# 3) maxpool1 (10                        X 13        X 13        ) #2x2 maxpool * 26x26 = 13 x 13\n",
+    "# #\n",
+    "# 4) Conv2 (# of feature maps kernels   X o/p Width X o/p Height)\n",
+    "# 4) Conv2 (20                          X 11        X 11        )\n",
+    "# #\n",
+    "# 5) maxpool2 (# of feature maps kernels X o/p width X o/p Height)\n",
+    "# 5) maxpool2 (20                        X 5        X 5        ) #2x2 maxpool * 26x26 = 13 x 13\n",
+    "# #\n",
+    "# 6) ANN layer (1X50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([28])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_loader.dataset.data[0][0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the Deep Learning Model\n",
+    "def createTheNet(printtoggle=False):\n",
+    "    class cnnClassNet(nn.Module):\n",
+    "        def __init__(self):\n",
+    "            super().__init__()\n",
+    "            \n",
+    "            self.print = printtoggle\n",
+    "            \n",
+    "            imgSize = train_loader.dataset.data[0][0].shape #28\n",
+    "            inChans  = 1 # RGB\n",
+    "            outChans = 64 # feature maps # of kernels\n",
+    "            krnSize  = 3 # odd number\n",
+    "            padding  = 0 # square if single input\n",
+    "            stride   = 1 # use maxpool instead of stride ... so stride = 1\n",
+    "            \n",
+    "            \n",
+    "            # First Convolution Layer\n",
+    "            #Conv2d(in_channels # of channels,\n",
+    "            #       out_channels # feature maps kernels, \n",
+    "            #       kernel_size, \n",
+    "            #       stride,\n",
+    "            #       padding  )\n",
+    "            self.conv1  = nn.Conv2d(inChans,outChans,krnSize, stride, padding)\n",
+    "            self.bnorm1 = nn.BatchNorm2d(outChans) # 64\n",
+    "            # output size = np.floor( (imsize[0]+2*padding-krnSize)/stride[0] ) + 1\n",
+    "            # output size = floor( (28 + 2*0 - 3) / 1 ) + 1 = 26\n",
+    "            # output size = 26/2 = 13 b/c of pool\n",
+    "            \n",
+    "            # Second Convolution Layer\n",
+    "            self.conv2  = nn.Conv2d(outChans,outChans*2,krnSize, stride, padding)\n",
+    "            self.bnorm2 = nn.BatchNorm2d(outChans*2) # 128\n",
+    "            # output size = floor( (13 + 2*0 - 3) / 1 ) + 1 = 11\n",
+    "            # output size = 11/2 = 5 b/c of pool\n",
+    "\n",
+    "            # Third Convolution Layer\n",
+    "            # self.conv3  = nn.Conv2d(outChans*2,outChans*2*2,krnSize, stride, padding)\n",
+    "            # self.bnorm3 = nn.BatchNorm2d(outChans*2*2) # 256\n",
+    "            # output size = floor( (5 + 2*0 - 3) / 1 ) + 1 = 3\n",
+    "            # output size = 3/2 = 1 b/c of avgpool\n",
+    "\n",
+    "            # Calculate the flattened size after conv layers\n",
+    "            # Use a dummy input to calculate it\n",
+    "            dummy_input = torch.zeros(1, 1, 28, 28)\n",
+    "            with torch.no_grad():\n",
+    "                out = F.max_pool2d(self.conv1(dummy_input), 2)\n",
+    "                out = F.max_pool2d(self.conv2(out), 2)\n",
+    "                flattened_size = out.numel()  # Total number of features\n",
+    "            print('flattened size = ',flattened_size)\n",
+    "            \n",
+    "            ### ------- Linear Layer ------- ###\n",
+    "            self.fc1 = nn.Linear(flattened_size,200) #1024, 256\n",
+    "            self.fc2 = nn.Linear(200,50)\n",
+    "            self.fc3 = nn.Linear(50,10)\n",
+    "            \n",
+    "        def forward(self, x):\n",
+    "            \n",
+    "            if self.print: print(f'Input: {list(x.shape)}')\n",
+    "            \n",
+    "            #first conv -> maxpool -> batchnorm -> relu\n",
+    "            #CPBR block\n",
+    "            x = F.max_pool2d( self.conv1(x), 2)\n",
+    "            x = F.leaky_relu( self.bnorm1(x)  )\n",
+    "            if self.print: print(f'First conv: {list(x.shape)}')\n",
+    "            \n",
+    "            x = F.max_pool2d( self.conv2(x), 2)\n",
+    "            x = F.leaky_relu( self.bnorm2(x)  )\n",
+    "            if self.print: print(f'Second conv: {list(x.shape)}')\n",
+    "\n",
+    "            # x = F.max_pool2d( self.conv3(x), 2)\n",
+    "            # x = F.leaky_relu( self.bnorm3(x)  )\n",
+    "            # if self.print: print(f'Third conv: {list(x.shape)}')\n",
+    "\n",
+    "            #reshape for linear layer\n",
+    "            nUnits = x.shape.numel()/x.shape[0]\n",
+    "            x = x.view(-1, int(nUnits))\n",
+    "            if self.print: print(f'Vectorized: {list(x.shape)}')\n",
+    "            \n",
+    "            # Linear layers\n",
+    "            x = F.leaky_relu( self.fc1(x)   )\n",
+    "            x = F.dropout(x, p=0.5, training=self.training)\n",
+    "            if self.print: print(f'fc1: {list(x.shape)}')\n",
+    "            \n",
+    "            x = F.leaky_relu( self.fc2(x)   )\n",
+    "            x = F.dropout(x, p=0.5, training=self.training)\n",
+    "            if self.print: print(f'fc2: {list(x.shape)}')\n",
+    "            \n",
+    "            x = self.fc3(x)\n",
+    "            if self.print: print(f'Final Output: {list(x.shape)}')\n",
+    "            \n",
+    "            \n",
+    "            return x\n",
+    "        \n",
+    "    modelInstance = cnnClassNet().to(device)\n",
+    "    \n",
+    "    lossfun = nn.CrossEntropyLoss()\n",
+    "    \n",
+    "    optimizer = torch.optim.Adam(modelInstance.parameters(), lr=0.001)\n",
+    "                                #weight_decay=1e-5)#, betas=(0.9, 0.999), eps=1e-8)\n",
+    "    \n",
+    "    return modelInstance, lossfun, optimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "flattened size =  3200\n",
+      "Input: [32, 1, 28, 28]\n",
+      "First conv: [32, 64, 13, 13]\n",
+      "Second conv: [32, 128, 5, 5]\n",
+      "Vectorized: [32, 3200]\n",
+      "fc1: [32, 200]\n",
+      "fc2: [32, 50]\n",
+      "Final Output: [32, 10]\n",
+      "torch.Size([32, 10])\n",
+      "tensor(2.3338, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test with 1 batch\n",
+    "net2, lossfun2, optimizer2 = createTheNet(True)\n",
+    "\n",
+    "X, y = next(iter(train_loader))\n",
+    "\n",
+    "X = X.to(device)\n",
+    "y = y.to(device)\n",
+    "\n",
+    "yHat = net2(X)\n",
+    "\n",
+    "#check size of output\n",
+    "print(yHat.shape)\n",
+    "\n",
+    "#compute the loss\n",
+    "loss = lossfun2(yHat, torch.squeeze(y))\n",
+    "print(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
