--- a/DL-CNN-PyTorch-FashionMNIST.ipynb
+++ b/DL-CNN-PyTorch-FashionMNIST.ipynb
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,7 +1321,7 @@
     "            \n",
     "            self.print = printtoggle\n",
     "            \n",
-    "            imgSize = train_loader.dataset.data[0][0].shape #28\n",
+    "            imgSize = train_loader.dataset.data[0].shape[0] #28\n",
     "            inChans  = 1 # RGB\n",
     "            outChans = 64 # feature maps # of kernels\n",
     "            krnSize  = 3 # odd number\n",
@@ -1337,6 +1337,8 @@
     "            #       padding  )\n",
     "            self.conv1  = nn.Conv2d(inChans,outChans,krnSize, stride, padding)\n",
     "            self.bnorm1 = nn.BatchNorm2d(outChans) # 64\n",
+    "            outputSize = np.floor( (imgSize+2*padding-krnSize)/stride ) + 1\n",
+    "            outputSize = np.floor(outputSize/2) # pool\n",
     "            # output size = np.floor( (imsize[0]+2*padding-krnSize)/stride[0] ) + 1\n",
     "            # output size = floor( (28 + 2*0 - 3) / 1 ) + 1 = 26\n",
     "            # output size = 26/2 = 13 b/c of pool\n",
@@ -1344,26 +1346,22 @@
     "            # Second Convolution Layer\n",
     "            self.conv2  = nn.Conv2d(outChans,outChans*2,krnSize, stride, padding)\n",
     "            self.bnorm2 = nn.BatchNorm2d(outChans*2) # 128\n",
+    "            outputSize = np.floor( (outputSize+2*padding-krnSize)/stride ) + 1\n",
+    "            outputSize = np.floor(outputSize/2) # pool\n",
     "            # output size = floor( (13 + 2*0 - 3) / 1 ) + 1 = 11\n",
     "            # output size = 11/2 = 5 b/c of pool\n",
-    "\n",
+    "            \n",
     "            # Third Convolution Layer\n",
     "            # self.conv3  = nn.Conv2d(outChans*2,outChans*2*2,krnSize, stride, padding)\n",
     "            # self.bnorm3 = nn.BatchNorm2d(outChans*2*2) # 256\n",
     "            # output size = floor( (5 + 2*0 - 3) / 1 ) + 1 = 3\n",
     "            # output size = 3/2 = 1 b/c of avgpool\n",
     "\n",
-    "            # Calculate the flattened size after conv layers\n",
-    "            # Use a dummy input to calculate it\n",
-    "            dummy_input = torch.zeros(1, 1, 28, 28)\n",
-    "            with torch.no_grad():\n",
-    "                out = F.max_pool2d(self.conv1(dummy_input), 2)\n",
-    "                out = F.max_pool2d(self.conv2(out), 2)\n",
-    "                flattened_size = out.numel()  # Total number of features\n",
-    "            print('flattened size = ',flattened_size)\n",
-    "            \n",
     "            ### ------- Linear Layer ------- ###\n",
-    "            self.fc1 = nn.Linear(flattened_size,200) #1024, 256\n",
+    "            # self.fc1 = nn.Linear(flattened_size,200) #1024, 256\n",
+    "            flattened_size = (outputSize**2) * (outChans*2)\n",
+    "            # print(flattened_size)\n",
+    "            self.fc1 = nn.Linear(int(flattened_size),200) #1024, 256\n",
     "            self.fc2 = nn.Linear(200,50)\n",
     "            self.fc3 = nn.Linear(50,10)\n",
     "            \n",
@@ -1417,14 +1415,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "flattened size =  3200\n",
+      "3200.0\n",
       "Input: [32, 1, 28, 28]\n",
       "First conv: [32, 64, 13, 13]\n",
       "Second conv: [32, 128, 5, 5]\n",
@@ -1433,7 +1431,7 @@
       "fc2: [32, 50]\n",
       "Final Output: [32, 10]\n",
       "torch.Size([32, 10])\n",
-      "tensor(2.3338, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
+      "tensor(2.2939, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
      ]
     }
    ],
@@ -1458,10 +1456,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Train the Model\n",
+    "\n",
+    "def trainTheModel(trainedModel, lossfun, optimizer, epochs=20):\n",
+    "    \n",
+    "    #number of epochs to train\n",
+    "    numepochs = epochs\n",
+    "    trainedModel.train()\n",
+    "        \n",
+    "    #initialize losses & accuracy\n",
+    "    trainLoss   = torch.zeros(numepochs)\n",
+    "    trainAcc = []\n",
+    "    devLoss   = torch.zeros(numepochs)\n",
+    "    devAcc  = []\n",
+    "\n",
+    "    for epochi in range(numepochs):\n",
+    "        \n",
+    "        #batch loss & accuracy\n",
+    "        batchLoss = []\n",
+    "        batchAcc  = []\n",
+    "        \n",
+    "        #loop over mini-batches\n",
+    "        for X,y in train_loader:\n",
+    "            \n",
+    "            # push data to GPU\n",
+    "            X = X.to(device)\n",
+    "            y = y.to(device)\n",
+    "            \n",
+    "            #Forward pass & loss\n",
+    "            yHat = trainedModel(X)\n",
+    "            loss = lossfun(yHat, y)\n",
+    "            \n",
+    "            #backprop\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            \n",
+    "            #loss from this batch\n",
+    "            batchLoss.append(loss.item())\n",
+    "            \n",
+    "            # accuracy from this batch for categorical data\n",
+    "            accMatches = torch.argmax(yHat, axis=1)\n",
+    "            accMatchesNumeric = (accMatches == y).float()\n",
+    "            batchAcc.append( torch.mean(accMatchesNumeric).item() )\n",
+    "\n",
+    "            # batchMathces = (torch.abs(yHat - y)).detach().cpu().float().numpy()\n",
+    "            # batchAcc.append(( batchMathces < 0.5))\n",
+    "            \n",
+    "            #accuracy from this batch -> for BCE sigmoid\n",
+    "            # accMatches = torch.sigmoid(yHat) > 0.5 ##\n",
+    "            # accMatchesNumeric = accMatches.float()\n",
+    "            # batchAcc.append( torch.mean( (accMatchesNumeric == y).float() ).item() )\n",
+    "        \n",
+    "        #average accuracy across mini-batches\n",
+    "        trainAcc.append(100 * np.mean((batchAcc)))\n",
+    "        \n",
+    "        #average losses across all mini-batches\n",
+    "        trainLoss[epochi] = np.mean(batchLoss)\n",
+    "        \n",
+    "        ################################\n",
+    "        # eval mode\n",
+    "        # do not use dropout \n",
+    "        # do not use batch normalization instead use avg\n",
+    "        trainedModel.eval()\n",
+    "\n",
+    "        #batch loss & accuracy\n",
+    "        batchLoss = []\n",
+    "        batchAcc  = []\n",
+    "        #final forward pass for Test Accuracy\n",
+    "        # X,y = next(iter(dev_loader))\n",
+    "        for X, y in dev_loader:\n",
+    "            \n",
+    "            # push data to GPU\n",
+    "            X = X.to(device)\n",
+    "            y = y.to(device)\n",
+    "\n",
+    "            #forward pass & loss\n",
+    "            with torch.no_grad():\n",
+    "                yHat = trainedModel(X)\n",
+    "                loss = lossfun(yHat, y)\n",
+    "            \n",
+    "            #batch loss    \n",
+    "            batchLoss.append(loss.item())\n",
+    "            \n",
+    "            #batch acc\n",
+    "            accMatches = torch.argmax(yHat, axis=1)\n",
+    "            accMatchesNumeric = (accMatches == y).float()\n",
+    "            batchAcc.append( torch.mean(accMatchesNumeric).item() )\n",
+    "\n",
+    "        #compute the test accuracy for categorical data\n",
+    "        devLoss[epochi] = ( np.mean(batchLoss) )\n",
+    "        \n",
+    "        devAcc.append(100*np.mean(batchAcc))\n",
+    "\n",
+    "        # testMatches = (torch.abs(yHat - y)).detach().cpu().float().numpy()\n",
+    "        # testMatchesNumeric = (testMatches < 1)\n",
+    "        # testAcc.append(100 * np.mean( testMatchesNumeric ) )\n",
+    "\n",
+    "        #compute the test accuracy for BCE sigmoid\n",
+    "        # testMatches = torch.sigmoid(yHat) > 0.5 \n",
+    "        # testMatchesNumeric = testMatches.float()\n",
+    "        # testAcc.append(100 * torch.mean( (testMatchesNumeric == y).float() ).item() )\n",
+    "    \n",
+    "    # return losses, trainedModel\n",
+    "    # return trainAcc, losses, trainedModel\n",
+    "    return trainAcc, trainLoss, devAcc, devLoss, trainedModel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3200.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test the training code that it has NO ERRORS\n",
+    "epochs=1\n",
+    "myModelInstance2, lossfun2, optimizer2 = createTheNet()\n",
+    "# losses2, trainedModel2 = trainTheModel(myModelInstance2, lossfun, optimizer, epochs)\n",
+    "# trainAcc2, losses2, trainedModel2 = trainTheModel(myModelInstance2, lossfun, optimizer, epochs)\n",
+    "trainAcc2, trainLoss2, devAcc2, devLoss2, trainedModel2 = trainTheModel(myModelInstance2, lossfun2, optimizer2, epochs)"
+   ]
   },
   {
    "cell_type": "code",
