--- a/DL-CNN-PyTorch-FashionMNIST.ipynb
+++ b/DL-CNN-PyTorch-FashionMNIST.ipynb
@@ -1407,8 +1407,8 @@
     "    \n",
     "    lossfun = nn.CrossEntropyLoss()\n",
     "    \n",
-    "    optimizer = torch.optim.Adam(modelInstance.parameters(), lr=0.001)\n",
-    "                                #weight_decay=1e-5)#, betas=(0.9, 0.999), eps=1e-8)\n",
+    "    optimizer = torch.optim.Adam(modelInstance.parameters(), lr=0.001\n",
+    "                                weight_decay=1e-4)#, betas=(0.9, 0.999), eps=1e-8)\n",
     "    \n",
     "    return modelInstance, lossfun, optimizer"
    ]
@@ -4791,6 +4791,70 @@
     "ax[1].set_ylim([0,110])\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.3552, 0.3037, 0.2799, 0.2645, 0.2696, 0.2734, 0.3281, 0.3790, 0.3562,\n",
+       "        0.4005, 0.4203, 0.4744, 0.4568, 0.4559, 0.6384, 0.4811, 0.5752, 0.5769,\n",
+       "        0.6302, 0.5377])"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "devLoss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.5678, 0.2770, 0.2224, 0.1830, 0.1510, 0.1247, 0.1030, 0.0895, 0.0733,\n",
+       "        0.0650, 0.0600, 0.0531, 0.0437, 0.0428, 0.0423, 0.0394, 0.0331, 0.0339,\n",
+       "        0.0284, 0.0315])"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainLoss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5182317495346069"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "testLoss"
    ]
   },
   {
