--- a/DL-CNN-PyTorch-FashionMNIST.ipynb
+++ b/DL-CNN-PyTorch-FashionMNIST.ipynb
@@ -1407,7 +1407,7 @@
     "    \n",
     "    lossfun = nn.CrossEntropyLoss()\n",
     "    \n",
-    "    optimizer = torch.optim.Adam(modelInstance.parameters(), lr=0.001\n",
+    "    optimizer = torch.optim.Adam(modelInstance.parameters(), lr=0.001,\n",
     "                                weight_decay=1e-4)#, betas=(0.9, 0.999), eps=1e-8)\n",
     "    \n",
     "    return modelInstance, lossfun, optimizer"
